crates/aprender-train/src/prune/snapshots/entrenar__prune__snapshot_tests__tests__all_prune_methods.snap
---
source: crates/aprender-train/src/prune/snapshot_tests.rs
expression: method_info
---
[
  {
    "display_name": "Magnitude",
    "name": "magnitude",
    "requires_calibration": false
  },
  {
    "display_name": "Wanda",
    "name": "wanda",
    "requires_calibration": true
  },
  {
    "display_name": "SparseGPT",
    "name": "sparsegpt",
    "requires_calibration": true
  },
  {
    "display_name": "Minitron (Depth)",
    "name": "minitron_depth",
    "requires_calibration": true
  },
  {
    "display_name": "Minitron (Width)",
    "name": "minitron_width",
    "requires_calibration": true
  }
]
