crates/aprender-train/src/prune/snapshots/entrenar__prune__snapshot_tests__tests__calibration_config_default.snap
---
source: src/prune/snapshot_tests.rs
assertion_line: 247
expression: config
---
{
  "num_samples": 128,
  "sequence_length": 2048,
  "dataset": "c4",
  "batch_size": 1,
  "normalize": true
}
