crates/aprender-train/src/prune/snapshots/entrenar__prune__snapshot_tests__tests__cubic_schedule.snap
---
source: src/prune/snapshot_tests.rs
assertion_line: 51
expression: schedule
---
{
  "type": "cubic",
  "start_step": 0,
  "end_step": 10000,
  "final_sparsity": 0.7
}
