crates/aprender-train/src/prune/snapshots/entrenar__prune__snapshot_tests__tests__cubic_sparsity_progression.snap
---
source: src/prune/snapshot_tests.rs
assertion_line: 89
expression: progression
---
[
  [
    0,
    0.0
  ],
  [
    10,
    0.13550004
  ],
  [
    20,
    0.24399999
  ],
  [
    30,
    0.3285
  ],
  [
    40,
    0.392
  ],
  [
    50,
    0.4375
  ],
  [
    60,
    0.468
  ],
  [
    70,
    0.4865
  ],
  [
    80,
    0.496
  ],
  [
    90,
    0.4995
  ],
  [
    100,
    0.5
  ]
]
