crates/aprender-train/src/prune/snapshots/entrenar__prune__snapshot_tests__tests__gradual_sparsity_progression.snap
---
source: src/prune/snapshot_tests.rs
assertion_line: 71
expression: progression
---
[
  [
    0,
    0.0
  ],
  [
    10,
    0.05
  ],
  [
    20,
    0.1
  ],
  [
    30,
    0.15
  ],
  [
    40,
    0.2
  ],
  [
    50,
    0.25
  ],
  [
    60,
    0.3
  ],
  [
    70,
    0.35
  ],
  [
    80,
    0.4
  ],
  [
    90,
    0.45
  ],
  [
    100,
    0.5
  ]
]
