crates/aprender-train/src/prune/snapshots/entrenar__prune__snapshot_tests__tests__initial_metrics.snap
---
source: src/prune/snapshot_tests.rs
assertion_line: 221
expression: metrics
---
{
  "achieved_sparsity": 0.0,
  "target_sparsity": 0.5,
  "total_parameters": 0,
  "parameters_pruned": 0,
  "parameters_remaining": 0,
  "layer_sparsity": [],
  "pre_prune_ppl": null,
  "post_prune_ppl": null,
  "ppl_increase_pct": null,
  "finetune_losses": [],
  "stage_durations": []
}
