crates/aprender-train/src/prune/snapshots/entrenar__prune__snapshot_tests__tests__sparsegpt_config.snap
---
source: src/prune/snapshot_tests.rs
assertion_line: 132
expression: config
---
{
  "method": "sparse_gpt",
  "target_sparsity": 0.7,
  "pattern": {
    "type": "unstructured"
  },
  "schedule": {
    "type": "one_shot",
    "step": 0
  },
  "fine_tune_after_pruning": true,
  "fine_tune_steps": 2000,
  "fine_tune_lr": 0.00001,
  "skip_embed_layers": true
}
